--- a/ConfigClient.properties
+++ b/ConfigClient.properties
@@ -1,3 +1,5 @@
+server.port=3456
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/mapspace
 spring.datasource.username=postgres
 spring.datasource.password=postgres
