--- a/ConfigClient.properties
+++ b/ConfigClient.properties
@@ -1,5 +1,9 @@
 server.port=3456
 
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/mapspace
 spring.datasource.username=postgres
 spring.datasource.password=postgres
